scaled down .top-middle div to be the width of the #met-facade at the smallest breakpoint and seems to have resolved the position:fixed issue with the nav and footer. added some margin-bottom spacing to ensure content isn't obscured in mobile landscape mode due to fixed footer.

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,6 @@ body {
 }
 
 .App {
-  /* width: 100%; */
   max-width: 1920px;
   display: flex;
   flex-direction: column;
@@ -54,7 +53,6 @@ ul {
 }
 
 nav {
-  /* position: sticky; */
   width: 100%;
   position: fixed;
   top: 0;
@@ -69,7 +67,6 @@ nav {
 
 .content-container {
   margin-top: 4.5rem;
-  /* padding-bottom: 1.25rem; */
   margin-bottom: 2.25rem;
   flex-grow: 1;
 }
@@ -139,7 +136,6 @@ a:visited {
   grid-template-columns: 1fr 1fr 1fr 1fr;
   column-gap: 1rem;
   row-gap: 2rem;
-  /* margin-bottom: 1rem; */
   margin-bottom: 2.25rem;
 }
 
@@ -215,7 +211,6 @@ a:visited {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  /* column-gap: 1rem; */
 }
 
 .filter-btn {
@@ -235,7 +230,7 @@ a:visited {
   grid-template-areas:
     "details image"
     "addToCart image";
-  margin: 0 1rem;
+  margin: 0 1rem 2.25rem 1rem;
 }
 
 h4 {
@@ -388,7 +383,7 @@ button:hover {
   justify-content: center;
   align-items: center;
   row-gap: 0.5rem;
-  margin-bottom: 1.25rem;
+  margin-bottom: 3.5rem;
 }
 
 .item-in-cart-container {
@@ -466,6 +461,7 @@ button:hover {
 #about-container {
   display: flex;
   padding: 0 2rem;
+  margin-bottom: 2.25rem;
 }
 
 #about-info-container {
@@ -502,17 +498,14 @@ button:hover {
 footer {
   height: 2rem;
   box-sizing: border-box;
-  /* padding: 0.25rem 0; */
   width: 100%;
   max-width: 1920px;
-  /* position: sticky; */
   position: fixed;
   left: 0;
   bottom: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* column-gap: 2rem; */
   background-color: #ec042c;
   color: white;
   z-index: 2;
@@ -521,7 +514,6 @@ footer {
 .footer-icon {
   fill: white;
   padding: 0 1rem;
-  /* margin: 0.25rem 0; */
   width: 1.5rem;
   height: 1.5rem;
 }
@@ -550,6 +542,7 @@ footer {
   display: block;
   transition: 0.5s ease;
   backface-visibility: hidden;
+  margin-bottom: 2.25rem;
 }
 
 .middle,
@@ -557,7 +550,6 @@ footer {
   transition: 0.5s ease;
   opacity: 0;
   position: absolute;
-  /* top: 50%; */
   top: 20rem;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -591,7 +583,6 @@ footer {
   align-content: center;
   column-gap: 0.5rem;
   width: var(--home-image-width);
-  /* top: 5%; */
   top: 2rem;
 }
 
@@ -634,6 +625,7 @@ footer {
     grid-template-columns: 1fr 1fr;
     width: 75%;
     margin: 0 auto;
+    margin-bottom: 2.25rem;
   }
 }
 
@@ -643,6 +635,7 @@ footer {
     column-gap: 0.25rem;
     width: 95%;
     margin: 0 auto;
+    margin-bottom: 2.25rem;
   }
 }
 
@@ -729,10 +722,6 @@ footer {
     max-width: calc(0.8 * var(--home-image-width));
     max-height: calc(0.8 * var(--home-image-width));
   }
-
-  /* .top-middle {
-    top: 10%;
-  } */
 
   .middle {
     top: 15rem;
@@ -828,9 +817,9 @@ footer {
     max-height: calc(0.5 * var(--about-image-width));
   }
 
-  /* #filter-btn-container {
-    column-gap: 0.25rem;
-  } */
+  .top-middle {
+    width: calc(0.5 * var(--home-image-width));
+  }
 
   .filter-btn {
     font-size: 0.8rem;
@@ -845,8 +834,4 @@ footer {
   .middle {
     top: 10rem;
   }
-
-  /* footer {
-    position: sticky;
-  } */
 }
